@@ -1,0 +1,32 @@
+//  Gant -- A Groovy build framework based on scripting Ant tasks.
+//
+//  Copyright © 2008 Russel Winder
+//
+//  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
+//  compliance with the License. You may obtain a copy of the License at
+//
+//    http://www.apache.org/licenses/LICENSE-2.0
+//
+//  Unless required by applicable law or agreed to in writing, software distributed under the License is
+//  distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+//  implied. See the License for the specific language governing permissions and limitations under the
+//  License.
+
+package org.codehaus.gant.tests
+
+/**
+ *  A test for the <code>GantBuilder</code> class.
+ *
+ *  @author Russel Winder <russel.winder@concertant.com>
+ */
+final class GantBuilder_Test extends GantTestCase {
+  void testGroovyTask ( ) {
+    script = '''
+target ( hello : '' ) {
+  groovyc ( srcdir : '.' , destdir : '/dev/null' )
+}
+'''
+    assertEquals ( -13 , processTargets ( 'hello' ) )
+    assertEquals ( 'destination directory "/dev/null" does not exist or is not a directory\n' , output )
+  }
+}
