@@ -11,6 +11,8 @@ Correct Execute.shell method so it works on Windows without Cygwin or MSYS.
 Correct all the tools and target sets so that a GantBinding rather than a Binding is passed.  This is a
 breaking API change for anyone who has their own tools or target sets.
 
+Add groovyc taskdef to the GantBuilder so the user doesn't have to.
+
 
 1.3.0 ( r9298, tagged as 9302 )
 -------------------------------
